# kiwitalk-gtk

./: .gitmodules  Cargo.toml  build.rs  debug.rs  debug.txt  installdeb.msys2.sh  installdep.debian.sh  kiwitalk-gtk.spec
.github/: dependabot.yml
src/: login.rs  main.rs
src/component/: author.rs  channel.rs  channel_entry.rs  message.rs  mod.rs
src/event_handler/: chat_list_update.rs  message.rs  mod.rs
src/gui/: #login.glade#  channel.ui~  channel_entry.ui  channel_entry.ui~  login.glade  login.glade~  login.ui  login.ui~  main.ui  mod.rs
