[package]
name = "kiwitalk-gtk"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loco = { path = "loco.rs" }
serde = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["v4", "serde"] }
whoami = "0.8.1"
dirs = "3.0.1"
config = "0.10"
lazy_static = ""

[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
