[package]
name = "kiwitalk-gtk"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
talk-api-client = { path = "../talk-api-client-rs" }
serde = "1.0"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["v4", "serde"] }
whoami = "1.2"
directories = "4.0"
lazy_static = "1.4"
log = "0.4.14"
base64 = "0.13"
tokio = { version = "1.15.0", features = ["rt", "macros", "rt-multi-thread"] }
simple_logger = "1.16"
email_address = "0.2"
kiwitalk = { path = "../kiwitalk-rs" }
talk-loco-client = { path = "../talk-loco-client-rs" }
thiserror = "1.0.30"
rand = "0.8"
futures = "0.3.19"

[dependencies.gtk]
version = "0.14.3"
#features = ["v3_20"]

[dependencies.gio]
version = "0.14.8"
#features = ["v2_66"]

[build-dependencies]
glade-bindgen = { git = "https://github.com/djdisodo/glade-bindgen.git" }
